# tonic_demo

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: hello_world.proto
src/: cilent.rs  hello_world.rs  main.rs  server.rs
